--- a/Prácticas/Práctica 1/index.html
+++ b/Prácticas/Práctica 1/index.html
@@ -2,6 +2,7 @@
 
 <html> <!--Para HTML5-->
     <head>
+        <link rel="icon" type="image/png" sizes="32x32" href="../../favicon.png">
         <title>Natalia</title> <!--Nombre de la pestaña del navegador-->
         <meta charset="UTF8"> <!--para desplegar acentos-->
         <link rel="stylesheet" type="text/css" href="../../styles.css"> <!--linkear la hoja de estilos, el ../sube de nivel en la carpeta-->
