--- a/Prácticas/index.html
+++ b/Prácticas/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html> <!--esta es la lista de prácticas-->
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../styles.css">
-    <title>Document</title>
+    <title>Prácticas</title>
 </head>
 
 <body>
