--- a/Prácticas/index.html
+++ b/Prácticas/index.html
@@ -12,8 +12,13 @@
     <div id="contenido"> 
         <img class="boton" src="img/nombreprácticas.png" width="700px">
         <br>
+
         <a href="Práctica 1/index.html" target="_self"> 
-            <img src="img/landing.png" width="300px">
+            <img src="img/landing.png" width="300px"> 
+        </a>
+        <br>
+        <a href="Práctica 2/index.html" target="_self"> 
+        <img class="boton" src="img/leclerc.png" width="300px">
         </a>
 </body>
 </html>
