--- a/Prácticas/Práctica 2/index.html
+++ b/Prácticas/Práctica 2/index.html
@@ -4,23 +4,23 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../../favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Práctica 2</title>
 </head>
 
 <body>
     <div id="contenido"> 
 
-        <a href="img sueltas/index.html" target="_self"> 
-            <img src="img3/monaco.jpeg" width="300px"> 
+        <a href="bgpatron/index.html" target="_self"> 
+            <img src="img/monaco.jpeg" width="300px"> 
         </a>
     
-        <a href="img sueltas 2/index.html" target="_self"> 
-        <img class="boton" src="img3/formula2.png" width="300px">
+        <a href="bgdegradado/index.html" target="_self"> 
+        <img class="boton" src="img/formula2.png" width="300px">
         </a>
       
-        <a href="img sueltas 3/index.html" target="_self"> 
-        <img class="boton" src="img3/charles.jpg" width="300px">
+        <a href="bgimagen/index.html" target="_self"> 
+        <img class="boton" src="img/charles.jpg" width="300px">
         </a>
 </body>
 </html>
