--- a/Prácticas/index.html
+++ b/Prácticas/index.html
@@ -14,11 +14,17 @@
         <br>
 
         <a href="Práctica 1/index.html" target="_self"> 
-            <img src="img/landing.png" width="300px"> 
+            <img class="boton" src="img/landing.png" width="300px"> 
         </a>
         <br>
+
         <a href="Práctica 2/index.html" target="_self"> 
         <img class="boton" src="img/leclerc.png" width="300px">
         </a>
+<br>
+<a href="Práctica 3/index.html" target="_self"> 
+    <img class="boton" src="img/harry.png" width="300px">
+    </a>
+
 </body>
 </html>
